--- a/Actions/Button/variables.module.scss
+++ b/Actions/Button/variables.module.scss
@@ -1,15 +1,20 @@
 $buttonPrimaryBackgroundColor: var(--colorActionPrimary);
 $buttonPrimaryBackgroundColorHover: var(--colorActionPrimaryHover);
+$buttonPrimaryBackgroundColorPressed: var(--colorActionPrimaryPressed);
 $buttonSecondaryBackgroundColorHover: var(--colorActionSecondary);
 $buttonSecondaryBackgroundColor: var(--colorActionSecondaryHover);
+$buttonSecondaryBackgroundColorPressed: var(--colorActionSecondaryPressed);
 $buttonSuccessBackgroundColor: var(--colorActionSuccess);
 $buttonSuccessBackgroundColorHover: var(--colorActionSuccessHover);
+$buttonSuccessBackgroundColorPressed: var(--colorActionSuccessPressed);
 $buttonSuccessFontColor: var(--colorActionSuccessFont);
 $buttonRemoveBackgroundColor: var(--colorActionRemove);
 $buttonRemoveBackgroundColorHover: var(--colorActionRemoveHover);
+$buttonRemoveBackgroundColorPressed: var(--colorActionRemovePressed);
 $buttonRemoveFontColor: var(--colorActionRemoveFont);
 $buttonCancelBackgroundColor: var(--colorActionCancel);
 $buttonCancelBackgroundColorHover: var(--colorActionCancelHover);
+$buttonCancelBackgroundColorPressed: var(--colorActionCancelPressed);
 $buttonCancelFontColor: var(--colorActionCancelFont);
 $borderSize: 1px;
 $fontColor: var(--colorTextWhite);
