--- a/Form/Checkbox/styles.module.scss
+++ b/Form/Checkbox/styles.module.scss
@@ -7,6 +7,10 @@
     align-items: center;
     width: 100%;
     cursor: pointer;
+    transition:
+      background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+      border-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+      color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
     .checkbox-icon-container {
       min-width: var(--sizeFormElementHeightSmall);
