--- a/Layout/Wall/styles.module.scss
+++ b/Layout/Wall/styles.module.scss
@@ -1,8 +1,7 @@
-@import "./variables.module.scss";
-
 @layer basic-ui {
   .wall {
-    background: $wallBackground;
+    padding: var(--spacingContainerTop) var(--spacingContainerSides);
+    background: var(--colorBackgroundMain);
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -12,29 +11,5 @@
     max-width: 125ch;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  @media (max-width: $extraSmallDevices) {
-    .wall {
-      padding: $wallPaddingSmall;
-    }
-  }
-
-  @media (min-width: $smallDevices) {
-    .wall {
-      padding: $wallPaddingSmall;
-    }
-  }
-
-  @media (min-width: $mediumDevices) {
-    .wall {
-      padding: $wallPaddingMedium;
-    }
-  }
-
-  @media (min-width: $largeDevices) {
-    .wall {
-      padding: $wallPadding;
-    }
   }
 }
