--- a/Presentation/Code/styles.module.scss
+++ b/Presentation/Code/styles.module.scss
@@ -26,8 +26,8 @@
     button.copy-button {
       opacity: 0.8;
       position: absolute;
-      top: var(--spacingContentBlockTopHalf);
-      right: var(--spacingContentBlockSidesHalf);
+      top: $spacingCodeButtonTop;
+      right: $spacingCodeButtonSides;
       &:hover {
         opacity: 1;
       }
