--- a/Form/Checkbox/styles.module.scss
+++ b/Form/Checkbox/styles.module.scss
@@ -24,16 +24,19 @@
       border-radius: var(--borderRadiusSmall);
 
       .checkbox-partial-icon {
-        min-width: var(--sizeFormElementHeightCheck);
-        min-height: var(--sizeFormElementHeightCheck);
-        max-width: var(--sizeFormElementHeightCheck);
-        max-height: var(--sizeFormElementHeightCheck);
+        transition:
+          max-width 100ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+          max-height 100ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
         background-color: var(--colorActionPrimary);
       }
 
       .checkbox-icon {
         color: var(--colorActionPrimary);
-        font-size: var(--sizeFormElementHeightSmall) !important;
+        transition: font-size 100ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+        max-width: 0;
+        font-size: 1px !important;
+        visibility: hidden;
+        opacity: 0;
       }
     }
 
@@ -78,6 +81,24 @@
 
     input {
       display: none;
+    }
+
+    &.checked {
+      .checkbox-icon {
+        max-width: 100%;
+        visibility: visible;
+        opacity: 1;
+        font-size: var(--sizeFormElementHeightSmall) !important;
+      }
+    }
+
+    &.partial {
+      .checkbox-partial-icon {
+        min-width: var(--sizeFormElementHeightCheck);
+        min-height: var(--sizeFormElementHeightCheck);
+        max-width: var(--sizeFormElementHeightCheck);
+        max-height: var(--sizeFormElementHeightCheck);
+      }
     }
   }
 }
