--- a/Presentation/Text/styles.module.scss
+++ b/Presentation/Text/styles.module.scss
@@ -36,7 +36,7 @@
     }
 
     &.paragraph {
-      margin-bottom: $DEFAULT_LAYOUT_ITEMS_GAP;
+      margin-bottom: var(--spacingDifferentItems);
     }
 
     &.fit-line {
