Form: added switch component

--- a/Actions/Button/variables.module.scss
+++ b/Actions/Button/variables.module.scss
@@ -25,4 +25,4 @@ $iconPadding: 0px 20px 0px 15px;
 $endIconPadding: 8px 15px 8px 20px;
 $borderRadius: var(--borderRadiusFormElement);
 $lineHeight: 1rem;
-$buttonHeight: 40px;
+$buttonHeight: var(--sizeButtonHeight);
