--- a/constants/styles/globalSizes.module.scss
+++ b/constants/styles/globalSizes.module.scss
@@ -19,6 +19,7 @@ $DEFAULT_CONTENT_BLOCK_SIDES_PADDING_SMALL: 20px;
 $DEFAULT_CONTENT_BLOCK_TOP_BOTTOM_PADDING: 40px;
 $DEFAULT_CONTENT_BLOCK_TOP_BOTTOM_PADDING_MEDIUM: 30px;
 $DEFAULT_CONTENT_BLOCK_TOP_BOTTOM_PADDING_SMALL: 20px;
+$DEFAULT_BUTTON_HEIGHT: 40px;
 $DEFAULT_BORDER_RADIUS: 16px;
 $DEFAULT_SMALL_BORDER_RADIUS: 4px;
 $DEFAULT_ITEMS_MARGIN: 20px;
