--- a/constants/styles/variables.scss
+++ b/constants/styles/variables.scss
@@ -67,6 +67,7 @@
   --borderRadiusSmall: #{$DEFAULT_SMALL_BORDER_RADIUS};
   --borderRadiusFormElement: #{$DEFAULT_FORMS_BORDER_RADIUS};
   // Sizes
+  --sizeButtonHeight: #{$DEFAULT_BUTTON_HEIGHT};
   --sizeFormElementHeight: #{$DEFAULT_FORMS_ELEMENT_HEIGHT};
   --sizeFormElementHeightSmall: #{$DEFAULT_FORMS_ELEMENT_SMALL_HEIGHT};
   --sizeFormElementHeightCheck: #{$DEFAULT_FORMS_ELEMENT_CHECK_HEIGHT};
