Form: add multiselect and fix select; Ui: some minor fixes

--- a/constants/styles/globalSizes.module.scss
+++ b/constants/styles/globalSizes.module.scss
@@ -24,6 +24,7 @@ $DEFAULT_BORDER_RADIUS: 16px;
 $DEFAULT_SMALL_BORDER_RADIUS: 4px;
 $DEFAULT_ITEMS_MARGIN: 20px;
 $DEFAULT_ITEMS_SAME_LEVEL_MARGIN: 10px;
+$DEFAULT_ITEMS_SAME_LEVEL_CLOSE_MARGIN: 5px;
 // lists
 $DEFAULT_LISTS_OUTER_SIDES_PADDING: 16px;
 $DEFAULT_LISTS_OUTER_TOP_BOTTOM_PADDING: 18px;
