--- a/constants/styles/variables.scss
+++ b/constants/styles/variables.scss
@@ -58,6 +58,7 @@
   --spacingFormElementTop: #{$DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING};
   --spacingDifferentItems: #{$DEFAULT_ITEMS_MARGIN};
   --spacingItemsOnSameLevel: #{$DEFAULT_ITEMS_SAME_LEVEL_MARGIN};
+  --spacingItemsOnSameLevelClose: #{$DEFAULT_ITEMS_SAME_LEVEL_CLOSE_MARGIN};
   --spacingListOutSides: #{$DEFAULT_LISTS_OUTER_SIDES_PADDING};
   --spacingListOutTop: #{$DEFAULT_LISTS_OUTER_TOP_BOTTOM_PADDING};
   --spacingListItemSides: #{$DEFAULT_LISTS_ITEM_SIDES_PADDING};
