--- a/Presentation/Tag/styles.module.scss
+++ b/Presentation/Tag/styles.module.scss
@@ -3,6 +3,7 @@
     display: flex;
     overflow: hidden;
     width: fit-content;
+    height: fit-content;
     padding: 0 0.5rem;
     background-color: var(--colorFormBackground);
     border-radius: var(--borderRadius);
