--- a/Form/Input/styles.module.scss
+++ b/Form/Input/styles.module.scss
@@ -79,6 +79,7 @@
       padding: 0;
       min-height: fit-content;
       max-height: fit-content;
+      color: var(--colorFormBorder) !important;
     }
 
     .input-icon {
