Styles: fix animations and add scrollbar colors

--- a/constants/styles/globalColors.module.scss
+++ b/constants/styles/globalColors.module.scss
@@ -7,6 +7,8 @@ $DARKER_BLOCK_BACKGROUND: #1a232c;
 $MENU_BACKGROUND: #11151d;
 $ADDITIONAL_BLOCK_BACKGROUND: #14b8a433;
 $DEFAULT_MASK_OVERLAY_BACKGROUND: #212d42;
+$SCROLLBAR_COLOR: #b1b1b1;
+$SCROLLBAR_COLOR_HOVER: #c5c5c5;
 
 // Typography
 $MAIN_FONT_COLOR: #ffffff;
