--- a/constants/styles/variables.scss
+++ b/constants/styles/variables.scss
@@ -77,6 +77,7 @@
   /* #endregion Sizes */
 
   /* #region Variables */
+  --zIndexUnderMask: #{$UNDER_MASK_LEVEL_INDEX};
   --zIndexPopupMask: #{$POPUP_MASK_LEVEL_INDEX};
   --zIndexSelect: #{$SELECT_LEVEL_INDEX};
   --zIndexModal: #{$MODAL_LEVEL_INDEX};
