--- a/Layout/Brick/styles.module.scss
+++ b/Layout/Brick/styles.module.scss
@@ -1,6 +1,6 @@
 @layer basic-ui {
   .brick {
-    background: var(--colorBackgroundBlock);
+    background-color: var(--colorBackgroundBlock);
     border-radius: var(--borderRadius);
     box-sizing: border-box;
     padding: var(--spacingContentBlockTop) var(--spacingContentBlockSides);
@@ -12,6 +12,23 @@
 
     &.whole {
       width: 100%;
+    }
+
+    &.square {
+      border-radius: 0;
+    }
+
+    &.bottom-gap {
+      margin-bottom: var(--spacingDifferentItems);
+    }
+
+    @for $i from 1 through 10 {
+      &.durability-#{$i} {
+        background-image: linear-gradient(
+          rgba(255, 255, 255, (0.012 * $i)),
+          rgba(255, 255, 255, (0.012 * $i))
+        );
+      }
     }
   }
 }
