--- a/Form/Input/styles.module.scss
+++ b/Form/Input/styles.module.scss
@@ -89,16 +89,6 @@
       top: var(--spacingFormElementTop);
     }
 
-    &.error {
-      input {
-        border-color: var(--colorFormBorderError);
-      }
-
-      .input-icon {
-        color: var(--colorFormBorderError);
-      }
-    }
-
     &.clearable {
       input {
         padding-right: $spacingInputSidesWithIcon;
@@ -174,7 +164,7 @@
         display: block;
         padding: 0;
         height: 11px;
-        font-size: ($inputScale * 1) rem;
+        font-size: $inputScale + rem;
         visibility: hidden;
         max-width: 0.01px;
         white-space: nowrap;
@@ -281,11 +271,12 @@
             transition: max-width 100ms cubic-bezier(0, 0, 0.2, 1) 50ms;
 
             .label-text {
-              padding-left: 2px;
-              padding-right: 2px;
+              padding-left: 4px;
+              padding-right: 12px;
               display: inline-block;
               opacity: 0;
               visibility: visible;
+              font-size: $inputScale + rem;
             }
           }
         }
@@ -363,6 +354,16 @@
 
       fieldset {
         border-color: var(--colorFormBackgroundDisabled);
+      }
+    }
+
+    &.error {
+      input {
+        border-color: var(--colorFormBorderError);
+      }
+
+      .input-icon {
+        color: var(--colorFormBorderError);
       }
     }
 
