Styles: start change spacing logic

--- a/Actions/ActionPanel/styles.module.scss
+++ b/Actions/ActionPanel/styles.module.scss
@@ -1,7 +1,7 @@
 @layer combined-ui {
   .action-panel {
     display: flex;
-    padding: var(--spacingItemsOnSameLevel);
+    padding: var(--spacingItemsClose);
     justify-content: space-between;
 
     &.horizontal {
