--- a/Form/Checkbox/styles.module.scss
+++ b/Form/Checkbox/styles.module.scss
@@ -76,7 +76,7 @@
     }
 
     .checkbox-label {
-      margin-left: var(--spacingItemsOnSameLevel);
+      margin-left: var(--spacingItemsClose);
     }
 
     input {
