--- a/Presentation/Divider/variables.module.example.scss
+++ b/Presentation/Divider/variables.module.example.scss
@@ -1,5 +1,5 @@
 $dividerBorderSize: 1px;
 $dividerBorderColor: var(--colorFormBorder);
 $dividerOpacity: 0.5;
-$dividerGap: var(--spacingDifferentItems);
-$dividerGapSmall: var(--spacingItemsOnSameLevel);
+$dividerGap: var(--spacingItems);
+$dividerGapSmall: var(--spacingItemsClose);
