--- a/Presentation/Text/styles.module.scss
+++ b/Presentation/Text/styles.module.scss
@@ -36,7 +36,7 @@
     }
 
     &.paragraph {
-      margin-bottom: var(--spacingDifferentItems);
+      margin-bottom: var(--spacingItems);
     }
 
     &.fit-line {
