--- a/Form/Radio/styles.module.scss
+++ b/Form/Radio/styles.module.scss
@@ -52,7 +52,7 @@
     }
 
     .radio-label {
-      margin-left: var(--spacingItemsOnSameLevel);
+      margin-left: var(--spacingItemsClose);
     }
 
     &.checked {
