--- a/Layout/Pillar/variables.module.example.scss
+++ b/Layout/Pillar/variables.module.example.scss
@@ -1,4 +1,4 @@
 @import "@/ui/constants/styles/globalSizes.module.scss";
 
 $columnCount: 12;
-$columnPadding: var(--spacingDifferentItems);
+$columnPadding: var(--spacingItems);
