--- a/Presentation/Tag/styles.module.scss
+++ b/Presentation/Tag/styles.module.scss
@@ -15,7 +15,7 @@
     }
 
     .tag-close {
-      margin-left: var(--spacingItemsOnSameLevel);
+      margin-left: var(--spacingItemsClose);
       padding: 0;
       min-height: 0.7rem;
       max-height: 0.7rem;
