--- a/Presentation/Title/styles.module.scss
+++ b/Presentation/Title/styles.module.scss
@@ -33,11 +33,11 @@
 
   .title {
     margin: 0;
-    padding: var(--spacingDifferentItems) 0px;
+    padding: var(--spacingItems) 0px;
     width: 100%;
 
     &.half-padding {
-      padding: calc(var(--spacingDifferentItems) * 0.5) 0px;
+      padding: calc(var(--spacingItems) * 0.5) 0px;
     }
 
     &.without-top-padding {
