--- a/constants/styles/globalSizes.module.example.scss
+++ b/constants/styles/globalSizes.module.example.scss
@@ -3,6 +3,12 @@ $extraSmallDevices: 575.98px;
 $smallDevices: 576px;
 $mediumDevices: 768px;
 $largeDevices: 992px;
+// spacing
+$DEFAULT_SPACING_EXTRA_SMALL: 0.5rem;
+$DEFAULT_SPACING_SMALL: 0.75rem;
+$DEFAULT_SPACING: 1.25rem;
+$DEFAULT_SPACING_LARGE: 1.75rem;
+$DEFAULT_SPACING_EXTRA_LARGE: 2.5rem;
 // sizes
 $MAIN_FONT_SIZE: 16px;
 $MAIN_FONT_SIZE_MEDIUM: 14px;
@@ -25,6 +31,7 @@ $DEFAULT_SMALL_BORDER_RADIUS: 4px;
 $DEFAULT_ITEMS_MARGIN: 20px;
 $DEFAULT_ITEMS_SAME_LEVEL_MARGIN: 10px;
 $DEFAULT_ITEMS_SAME_LEVEL_CLOSE_MARGIN: 5px;
+
 // lists
 $DEFAULT_LISTS_OUTER_SIDES_PADDING: 16px;
 $DEFAULT_LISTS_OUTER_TOP_BOTTOM_PADDING: 18px;
