--- a/Layout/Beam/styles.module.scss
+++ b/Layout/Beam/styles.module.scss
@@ -8,23 +8,23 @@
     flex-wrap: wrap;
     flex: 0 1 auto;
 
-    .center {
+    &.center {
       justify-content: center;
     }
 
-    .start {
+    &.start {
       justify-content: flex-start;
     }
 
-    .end {
+    &.end {
       justify-content: flex-end;
     }
 
-    .between {
+    &.between {
       justify-content: space-between;
     }
 
-    .around {
+    &.around {
       justify-content: space-around;
     }
 
@@ -34,6 +34,18 @@
 
     &.whole {
       height: 100%;
+    }
+
+    &.align-start {
+      align-items: flex-start;
+    }
+
+    &.align-center {
+      align-items: center;
+    }
+
+    &.align-end {
+      align-items: flex-end;
     }
   }
 }
